# feodorov-cg-lab2

./: .gitignore  CMakeLists.txt  README.md  lab2.cc
src/: CMakeLists.txt  cgcw.cc  cube-cw.cc  cube.cc  flower.cc  light.cc  mouse.cc  orig.cc
src/example1/: CMakeLists.txt  example1.cc
src/include/: cube.h  orig.h
